--- a/styles/globals.css
+++ b/styles/globals.css
@@ -48,3 +48,35 @@ body {
         animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
     }
 }
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.75);
+    z-index: 9;
+}
+
+.modal {
+    background-color: #e4debe;
+    top: 10%;
+    border-radius: 6px;
+    padding: 1.5rem;
+    width: 20rem;
+    max-width: 90%;
+    z-index: 10;
+
+    /* animation: slide-up-fade-in 0.3s ease-out forwards; */
+}
+
+.modal h2 {
+    margin-top: 0;
+}
+
+.modal p {
+    color: #d24545;
+    /* margin-top: 8%;
+    font-size: 15px; */
+}
